--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   "telephone": "+91-8826906040",
   "address": {
     "@type": "PostalAddress",
-    "streetAddress": "Pole No. 10-A, RZ-18-D-3",
+    "streetAddress": "Rz 77 Main, Sant Mohalla",
     "addressLocality": "Sagar Pur",
     "addressRegion": "New Delhi",
     "postalCode": "110045",
@@ -142,6 +142,7 @@
 </html>
 
 </div>
+
 
 
 
