--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   "address": {
     "@type": "PostalAddress",
     "streetAddress": "Rz 77 Main, Sant Mohalla",
-    "addressLocality": "Sagar Pur",
+    "addressLocality": "Sagar Pur, Delhi NCR",
     "addressRegion": "New Delhi",
     "postalCode": "110045",
     "addressCountry": "IN"
@@ -118,8 +118,8 @@
     <h3>📍 Our Shop Address</h3>
     <p>
         ZIS Home Appliances<br>
-        Pole No. 10-A, RZ-18-D-3<br>
-        Sagar Pur, New Delhi – 110045
+        Rz 77 Main, Sant Mohalla<br>
+        Sagar Pur, Delhi NCR, New Delhi – 110045
     </p>
 
     <a class="map-btn"
@@ -142,6 +142,7 @@
 </html>
 
 </div>
+
 
 
 
