--- a/index.html
+++ b/index.html
@@ -107,10 +107,22 @@
         <p>“Fridge repair best price me hua. Technician knowledgeable tha.”</p>
         <strong>★★★★★ – Ayesha, Palam</strong>
     </div>
+	    <div class="review-card">
+        <p>“Washing machine full Repairing as a Good Experiance Technician Low price & fast Service.”</p>
+        <strong>★★★★★ – Sandeep, South Delhi</strong>
+    </div>
 
     <div class="review-card">
         <p>“Same day service mila. Behaviour bhi bahut acha tha.”</p>
         <strong>★★★★★ – Imran, Dwarka</strong>
+    </div>
+	    <div class="review-card">
+        <p>“Thank You ZIS Home Appliances maine socha ki mera freeze thik nahi ho payega par aapne kar dikhya.”</p>
+        <strong>★★★★★ – Mukesh Sharma, lajpat Nagar</strong>
+    </div>
+	    <div class="review-card">
+        <p>“Microwave oven Repair”</p>
+        <strong>★★★★★ – Sahil, old Delhi</strong>
     </div>
 </section>
 
@@ -142,6 +154,7 @@
 </html>
 
 </div>
+
 
 
 
