--- a/index.html
+++ b/index.html
@@ -101,21 +101,69 @@
     <h2>⭐ What Our Customers Say</h2>
 
    <div class="review">⭐⭐⭐⭐⭐ Very fast service…</div>
+<div class="reviews">
 
+  <div class="review-box">
+    ⭐⭐⭐⭐⭐
+    <p>Very fast AC service. Cooling ekdum new jaisa ho gaya.</p>
+    <strong>– Ayesha, Palam</strong>
+  </div>
 
-    <div class="review-card">
-        <p>“Fridge repair best price me hua. Technician knowledgeable tha.”</p>
-        <strong>★★★★★ – Ayesha, Palam</strong>
-    </div>
-	    <div class="review-card">
-        <p>“Washing machine full Repairing as a Good Experiance Technician Low price & fast Service.”</p>
-        <strong>★★★★★ – Sandeep, South Delhi</strong>
-    </div>
+  <div class="review-box">
+    ⭐⭐⭐⭐⭐
+    <p>Fridge repair best price me hua. Technician knowledgeable tha.</p>
+    <strong>– Sandeep, South Delhi</strong>
+  </div>
 
-    <div class="review-card">
-        <p>“Same day service mila. Behaviour bhi bahut acha tha.”</p>
-        <strong>★★★★★ – Imran, Dwarka</strong>
-    </div>
+  <div class="review-box">
+    ⭐⭐⭐⭐⭐
+    <p>Washing machine same day repair ho gaya. Service achhi lagi.</p>
+    <strong>– Imran, Dwarka</strong>
+  </div>
+
+  <div class="review-box">
+    ⭐⭐⭐⭐⭐
+    <p>Technician ka behaviour bahut achha tha. Problem turant solve ki.</p>
+    <strong>– Mukesh Sharma, Lajpat Nagar</strong>
+  </div>
+
+  <div class="review-box">
+    ⭐⭐⭐⭐⭐
+    <p>Microwave repair within 1 hour. Highly recommended.</p>
+    <strong>– Sahil, Old Delhi</strong>
+  </div>
+
+  <div class="review-box">
+    ⭐⭐⭐⭐⭐
+    <p>Genuine spare parts mile aur warranty bhi di. Trusted service.</p>
+    <strong>– Ravi, Janakpuri</strong>
+  </div>
+
+  <div class="review-box">
+    ⭐⭐⭐⭐⭐
+    <p>AC gas refill sahi rate par hua. Cooling ab perfect hai.</p>
+    <strong>– Pooja, Uttam Nagar</strong>
+  </div>
+
+  <div class="review-box">
+    ⭐⭐⭐⭐⭐
+    <p>Fridge compressor change karwaya. Kaam professional tha.</p>
+    <strong>– Arif, Sagarpur</strong>
+  </div>
+
+  <div class="review-box">
+    ⭐⭐⭐⭐⭐
+    <p>On time service aur price bhi reasonable tha.</p>
+    <strong>– Neha, Tilak Nagar</strong>
+  </div>
+
+  <div class="review-box">
+    ⭐⭐⭐⭐⭐
+    <p>Old washing machine bilkul new jaisi chalne lagi. Thanks!</p>
+    <strong>– Rohit, Mahavir Enclave</strong>
+  </div>
+
+</div>
 	    <div class="review-card">
         <p>“Thank You ZIS Home Appliances maine socha ki mera freeze thik nahi ho payega par aapne kar dikhya.”</p>
         <strong>★★★★★ – Mukesh Sharma, lajpat Nagar</strong>
@@ -154,6 +202,7 @@
 </html>
 
 </div>
+
 
 
 
